--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
     <!--Reference platform.js library here-->
 
     <!--Reference Client ID in meta tag here-->
+     <!-- 982549618775-kmav7rj6t4msf121dri2g035nv5e04uj.apps.googleusercontent.com -->
+     <meta name="google-signin-client_id" content="982549618775-kmav7rj6t4msf121dri2g035nv5e04uj.apps.googleusercontent.com">
 
+
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <!--jquery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -28,7 +33,7 @@
     <div class ="mainContainer">
         <!--Text greeting user-->
         <header>
-            <h1>WELCOME <span class="userName">USER_NAME</span></h1>    
+            <h1>WELCOME <span class="userName">USER_NAME</span></h1>
         </header>
 
         <!--Populate section with user data-->
